rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
  labels:
    app: nodejs
    service: stable-svc
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nodejs
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  labels:
    app: nodejs
    service: canary-svc
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nodejs
  type: NodePort
